[package]
authors = [
  "Steven Roose <steven@stevenroose.org>",
  "Jean Pierre Dudey <jeandudey@hotmail.com>",
  "Dawid Ciężarkiewicz <dpc@dpc.pw>",
]
description = "JSON-enabled type structs for bitcoincore-rpc crate."
edition = "2018"
homepage = "https://github.com/rust-bitcoin/rust-bitcoincore-rpc/"
keywords = ["crypto", "bitcoin", "bitcoin-core", "rpc"]
license = "CC0-1.0"
name = "bitcoincore-rpc-json"
readme = "README.md"
repository = "https://github.com/rust-bitcoin/rust-bitcoincore-rpc/"
version = "0.16.0"

[lib]
name = "bitcoincore_rpc_json"
path = "src/lib.rs"

[dependencies]
serde = {version = "1", features = ["derive"]}
serde_json = "1"

bitcoin = {git = "https://github.com/boolnetwork/rust-dogecoin", rev = "c976a25", features = ["serde"]}
